# LocalBinaryPattern

./: LBP.cpp  LocalBinaryPattern_omp  README.md  main.cpp
LBP_omp/: CMakeLists.txt  LBP.h  main.cpp
LBP_seq/: CMakeLists.txt  LBP.cpp  LBP.h  main.cpp
